--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,12 +2,12 @@
 <html lang="is">
 <head>
     <meta charset="UTF-8">
-    <title>Undirskriftalisti</title>
+    <title>Nýskráning</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
-        <h1 class="header__Title"><%= title %></h1>
+        <h1 class="header__Title">Nýskráning</h1>
     </div>
     <div class="signup__Form">
         <form method="post" action="/signup" autocomplete="off" class="signup__Div">
@@ -20,7 +20,7 @@
                 <input class="input" id="password" type="password" name="password"  >
             </label>
             <div class="signup__Button">
-                <button>Innskrá</button>
+                <button>Skrá mig</button>
             </div>
         </form>
         <% if (message) { %>
