Looks like sign up works. Login problems. TODO Look up in DATABASE and confirm User and Password exists.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
         <h1 class="header__Title"><%= title %></h1>
     </div>
     <div class="login__Form">
-        <form method="post" action="/admin/login" autocomplete="off" class="login__Div">
+        <form method="post" action="/login" autocomplete="off" class="login__Div">
             <label class="login__Row">
                 <p>Notendanafn</p>
                 <input class="input" id="username" type="text" name="username" >
