bakendi ready - þarf að athuga bugs

--- a/views/funds.ejs
+++ b/views/funds.ejs
@@ -1,11 +1,20 @@
 <%- include('header') -%>  
 <p> To deposit funds into your account: </p>
 <p> 1. Send SMLY coins to this address: BKwDpZ7qeHv2vUPXzSPWW9KFiuMvrt7u7T </p>
-<p> 2. Submit the hash: </p>
+<p> 2. Give block explorers some time to update! </p>
+<p> 3. Submit the hash: </p>
 
 <form method="post" action="addfunds" autocomplete="off">
     <label> HASH: </label>
     <input class="input" id="hash" type="hash" name="hash">
     <button class="btn btn-info ">Verify Hash</button>
 </form>
+
+<a href='/'> Return </a>
+
+<% if (msg) { %>
+    <div class="errors">
+      <p><%= msg %></p>
+    </div>
+<% } %>  
 <%- include('footer') -%>
