--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,8 @@
 	</div>
 <% } else if (data) { %>
 	<div class="results">
-		<p><%= data.number_generated %></p>
+		<p>Number generated: <%= data.number_generated %></p>
+		<p><%= data.win %></p>
 	</div>
 <% } %>
 
